# rag-ai

./: README.md  app.py  email_model.py  email_utils.py  emailsorter.kv  icon_sidebar.tcss  main.py  pong.kv  pyproject.toml
