[project]
name = "rag-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "mailbox>=0.4",
    "textual>=1.0.0",
    "textual-dev>=1.7.0",
    "faiss-cpu>=1.9.0.post1",
    "beautifulsoup4>=4.12.3",
    "kivy>=2.3.1",
]
